Final version hopefully

--- a/NLP Distaster.ipynb
+++ b/NLP Distaster.ipynb
@@ -42,7 +42,9 @@
    "metadata": {},
    "source": [
     "#### EDA\n",
-    "First starting out by importing the CSVs and taking a look at the training data. I'll import all columns as strings so I don't need to convert them later."
+    "First starting out by importing the CSVs and taking a look at the training data. I'll import all columns as strings so I don't need to convert them later.\n",
+    "\n",
+    "Looking at the data from train_df.info(), there's 7613 total entries with 5 columns in the data set, but 2533 of them are missing location data, and 61 of them are missing keywords. "
    ]
   },
   {
@@ -182,9 +184,7 @@
    "id": "df11a852-aa00-49e7-9323-33ea5ad3ce88",
    "metadata": {},
    "source": [
-    "Looking at the data from train_df.info(), there's 7613 total entries with 5 columns in the data set, but 2533 of them are missing location data, and 61 of them are missing keywords. \n",
-    "\n",
-    "Looking at the test data, missing location/keyword data is a regular occurence, so I'll likely want to keep entries with missing info during training still, but I'll fill in the null values with the empty string '' so it doesn't cause issues later."
+    "Looking at the test data, missing location/keyword data is a regular occurence, so I'll likely want to keep entries with missing info during training still, but I'll fill in the null values with the empty string '' in case it causes issues later."
    ]
   },
   {
@@ -545,15 +545,9 @@
    "id": "5bb789ce-fc36-4d55-abda-41e36cf029ab",
    "metadata": {},
    "source": [
-    "#### Model Architecture\n",
+    "### Basic Model Architecture\n",
     "\n",
-    "Describe your model architecture and reasoning for why you believe that specific architecture would be suitable for this problem. \n",
-    "\n",
-    "Since we did not learn NLP-specific techniques such as word embeddings in the lectures, we recommend looking at Kaggle tutorials, discussion boards, and code examples posted for this challenge.  You can use any resources needed, but make sure you “demonstrate” you understood by including explanations in your own words. Also importantly, please have a reference list at the end of the report.  \n",
-    "\n",
-    "There are many methods to process texts to matrix form (word embedding), including TF-IDF, GloVe, Word2Vec, etc. Pick a strategy and process the raw texts to word embedding. Briefly explain the method(s) and how they work in your own words.\n",
-    "\n",
-    "Build and train your sequential neural network model (You may use any RNN family neural network, including advanced architectures LSTM, GRU, bidirectional RNN, etc.). "
+    "I'm starting my basic model using 2 Bidirectional layers combined with LSTM (and Dropout layers for some regularization). I'll use 2 Dense layers at the end to get the final output."
    ]
   },
   {
@@ -666,8 +660,6 @@
    ],
    "source": [
     "# Creating basic architecture\n",
-    "# EMBEDDING_DIM = 128\n",
-    "\n",
     "def basic_RNN():\n",
     "    model = Sequential([\n",
     "        Embedding(unique_word_count, 128), #, input_length=MAX_LEN  #deprecated?\n",
@@ -689,9 +681,9 @@
    "id": "a91b75e5-dd6a-4646-8fb6-d91554935b40",
    "metadata": {},
    "source": [
-    "Next we'll compile the model. I'll use the Adam optimizer since it'll handle some of the learning rate balancing, and I'll use binary cross-entropy for the loss function. I'll start the learning rate at 0.001 and adjust if it learns too fast/slow.\n",
+    "### Model 1\n",
     "\n",
-    "### Model 1"
+    "Next we'll compile the model. I'll use the Adam optimizer since it'll handle some of the learning rate balancing, and I'll use binary cross-entropy for the loss function. I'll start the learning rate at 0.001 and adjust if it learns too fast/slow."
    ]
   },
   {
@@ -818,42 +810,6 @@
     "ax2.set_ylim([0, 2.5])\n",
     "ax2.set_title('Loss: Learn Rate 0.001')\n",
     "ax2.legend(loc='lower right')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52ca0f81-b2b3-4cff-9e42-8b1d40afed72",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8b38939-689f-409d-b88b-254e350b43ee",
-   "metadata": {},
-   "source": [
-    "#### Results and Analysis\n",
-    "Run hyperparameter tuning, try different architectures for comparison, apply techniques to improve training or performance, and discuss what helped.\n",
-    "\n",
-    "Includes results with tables and figures. There is an analysis of why or why not something worked well, troubleshooting, and a hyperparameter optimization procedure summary."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b29361cb-dba2-4b78-b371-f121f55d258e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83b5e7c7-1995-4957-ac0b-1e5064051db5",
-   "metadata": {},
-   "source": [
-    "#### Conclusion\n",
-    "Discuss and interpret results as well as learnings and takeaways. What did and did not help improve the performance of your models? What improvements could you try in the future?"
    ]
   },
   {
@@ -1203,12 +1159,14 @@
    "source": [
     "The good news is that there's a much nicer looking curve, and it doesn't overfit too quickly. The bad news is that the accuracy is still maxing out at 0.8, so the actual accuracy hasn't really improved by lowering the learning rate. This likely means there's either some other other hyperparamter I need to tune, there might be issues with how I preprocessed the data, or the model itself needs changes.\n",
     "\n",
+    "### Model 4\n",
+    "\n",
     "First, I want to try removing URLs from the text. It likely doesn't make sense to keep it in as part of the training data. I'll remove the text from the training data, and remake the training/validation sets. This cuts the unique word count down to 15279, which is quite a bit smaller than the previous unique word count I was using. (19863)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 169,
    "id": "2f101a24-641f-4523-bfe1-5fd683efe35c",
    "metadata": {},
    "outputs": [
@@ -1410,6 +1368,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df3ec004-dbee-4383-a6dc-3c88ee8667eb",
+   "metadata": {},
+   "source": [
+    "I played around with a few learning rates, but I stuck with the 0.00001 learning rate since like before, the higher learning rates converged too quickly and lead to overfitting."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 151,
    "id": "5cc4d8f7-c7f9-485d-964e-8d68a03771e9",
@@ -1592,9 +1558,9 @@
    "id": "0a6638ef-b161-47e9-bec7-7d2cbb03835b",
    "metadata": {},
    "source": [
-    "#### Submission\n",
+    "### Submission\n",
     "\n",
-    "Unfortunately, it seems like the additions of more regularization didn't fix the issue (in fact, it's now slightly worse performance-wise). For my submission, I'll likely stick with the base model at learn rate 0.00001, since that seemed to have the best performance. I'll run it for around 30 epochs, since that seems to be around the inflection point is before it starts overfitting."
+    "Unfortunately, it seems like the additions of more regularization didn't fix the issue (in fact, it's now slightly worse performance-wise). This either means the regularization I added didn't change much, or removing the URLs didn't work well (or both). For my submission, I'll likely stick with the base model at learn rate 0.00001, since that seemed to have the best performance. I'll run it for around 30 epochs, since that seems to be where the inflection point is around before it starts overfitting."
    ]
   },
   {
@@ -1691,8 +1657,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "id": "11b699fc-93bf-4b1e-be66-6c047a515b94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m102/102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>keyword</th>\n",
+       "      <th>location</th>\n",
+       "      <th>text</th>\n",
+       "      <th>prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>happen terrible car crash</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>hear earthquake different city stay safe</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>forest fire spot pond geese flee street save</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>apocalypse lighting spokane wildfire</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>typhoon soudelor kill china taiwan</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id keyword location                                          text  \\\n",
+       "0   0     NaN      NaN                     happen terrible car crash   \n",
+       "1   2     NaN      NaN      hear earthquake different city stay safe   \n",
+       "2   3     NaN      NaN  forest fire spot pond geese flee street save   \n",
+       "3   9     NaN      NaN          apocalypse lighting spokane wildfire   \n",
+       "4  11     NaN      NaN            typhoon soudelor kill china taiwan   \n",
+       "\n",
+       "   prediction  \n",
+       "0           1  \n",
+       "1           1  \n",
+       "2           1  \n",
+       "3           1  \n",
+       "4           1  "
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test = np.array(test_df.text)\n",
+    "\n",
+    "test_sequence = tokenizer.texts_to_sequences(X_test)\n",
+    "\n",
+    "test_pad = pad_sequences(test_sequence, maxlen=MAX_LEN, padding=\"post\", truncating=\"post\")\n",
+    "\n",
+    "prediction = basic_model5.predict(test_pad)\n",
+    "predict_labels = (prediction > 0.5).astype(int)\n",
+    "\n",
+    "test_df['prediction'] = predict_labels\n",
+    "\n",
+    "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "1ed7a2d3-c198-422c-a9d2-e21d8a59cf2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = pd.DataFrame({\n",
+    "    'id':test_df.id,\n",
+    "    'target':test_df.prediction\n",
+    "})\n",
+    "\n",
+    "submission.to_csv('submission_rnn.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f379e067-8e1a-4da7-91f9-d6a26d841bb4",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "Overall, a bit disappointed I couldn't really meaningfully improve my model even after tweaking learning rates and regularization as hyperparameters. The actual score is still reasonable though (final result was a 0.77934 score). \n",
+    "\n",
+    "As far as other improvements, I do think the issue is less about the model and more about the data I'm feeding it. Notably, I decided to only use the text field and ignore keyword/location, since I wasn't sure how to combine all 3 into a single input, but I suspect the reason my models converged so quickly to was just due to a lack of data to learn more from, and adding the extra dimensions from the keywords/locations might've made the difference. I also could've played around more with my choice of optimizer (instead of sticking with Adam), or maybe tried a different activation function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbc48139-d7d6-42e6-a984-5f9d84ea8859",
    "metadata": {},
    "outputs": [],
    "source": []
