Small explanation change

--- a/NLP Distaster.ipynb
+++ b/NLP Distaster.ipynb
@@ -503,6 +503,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "218b134c-f708-4fb8-9451-0da4fb545e90",
+   "metadata": {},
+   "source": [
+    "One last step for preprocessing the text data. I want to convert the text to numerical sequences for the model to read, and pad out the sequences so they're all the same length."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 159,
    "id": "93a295e1-7185-40dc-bee7-4162f95a0108",
